tests/k8s_testcases/example_policies/demo/interferes/interferes-networkpolicy3.yaml
### Enables traffic to namespace kube-system from pods in namespace default

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-traffic-from-default-to-kube-system
  namespace: kube-system 
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress: 
    - from:
      - namespaceSelector:
          matchLabels:
            unique-label: defaultNameSpace
