tests/k8s_testcases/example_policies/demo/interferes/interferes-scheme.yaml
namespaceList: ../../../example_podlist/ns_list.json
podList: ../../../example_podlist/pods_list.json

networkConfigList:
  - name: np1
    networkPolicyList:
      - interferes-networkpolicy1.yaml
    expectedWarnings: 0

  - name: np2
    networkPolicyList:
      - interferes-networkpolicy2.yaml
    expectedWarnings: 0

  - name: np3
    networkPolicyList:
      - interferes-networkpolicy3.yaml
    expectedWarnings: 0

  - name: np4
    networkPolicyList:
      - interferes-networkpolicy4.yaml
    expectedWarnings: 0

  - name: interferes-networkpolicy4
    networkPolicyList:
      - interferes-networkpolicy4.yaml
    expectedWarnings: 0

queries:
  - name: Interferes_np1_np2
    interferes :
      - np1
      - np2
    expected: 1

  - name: pairwiseInterferes_np3_and_np4
    pairwiseInterferes :
      - np3
      - np4
    expected: 2
